Fix web menu items too small

--- a/src/components/MenuSectionForWeb.module.scss
+++ b/src/components/MenuSectionForWeb.module.scss
@@ -59,11 +59,9 @@
     display: block;
     width: 10rem;
     height: 10rem;
-    min-width: 10rem;
-    min-height: 10rem;
     margin: auto;
     margin-right: 0;
-    padding: 0.5rem;
+    padding: 0;
     border-style: hidden;
     border-radius: 0.5rem;
     overflow: hidden;
